pkg/localenv/microservice/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    istio-injection: enabled
    app.kubernetes.io/part-of: three-tier-microservice
    app.kubernetes.io/managed-by: navigator
