pkg/localenv/microservice/manifests/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: microservices
  labels:
    app.kubernetes.io/name: default-peer-auth
    app.kubernetes.io/component: security
spec:
  mtls:
    mode: STRICT
